--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.xuxiaobu.doc</groupId>
+            <groupId>com.github.xuyuansheng</groupId>
             <artifactId>xbapi-docs</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
