--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
     <groupId>com.github.xuyuansheng</groupId>
     <artifactId>xbapi-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>xbapi--maven-plugin Maven Mojo</name>
-
+    <description>apidoc文档maven插件</description>
+    <url>https://github.com/xuyuansheng/xbapi-maven-plugin</url>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -15,7 +16,7 @@
         <dependency>
             <groupId>com.github.xuyuansheng</groupId>
             <artifactId>xbapi-docs</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
@@ -59,6 +60,37 @@
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
             </plugin>
+            <!-- Javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--gpg插件,文件传输加密,deploy时会用上-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <distributionManagement>
@@ -71,5 +103,23 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <url>https://github.com/xuyuansheng</url>
+        <connection>https://github.com/xuyuansheng/xbapi-maven-plugin.git</connection>
+    </scm>
+    <developers>
+        <developer>
+            <name>Xu Yuan Sheng</name>
+            <email>804288658@qq.com</email>
+            <organization>no</organization>
+        </developer>
+    </developers>
 
 </project>
