--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.github.xuyuansheng</groupId>
     <artifactId>xbapi-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.1</version>
+    <version>1.2.SNAPSHOT</version>
     <name>xbapi--maven-plugin Maven Mojo</name>
     <description>apidoc文档maven插件</description>
     <url>https://github.com/xuyuansheng/xbapi-maven-plugin</url>
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.github.xuyuansheng</groupId>
             <artifactId>xbapi-docs</artifactId>
-            <version>1.1</version>
+            <version>1.2.SNAPSHOT</version>
         </dependency>
 
         <dependency>
